# src/swagger.json
@@ -842,6 +842,31 @@
           "Analytics"
         ]
       }
+    },
+    "/payment/history": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Payment"
+        ]
+      }
     }
   },
   "definitions": {
